<resources>
    <string name="app_name">Girls of Luxury</string>
    <string name="editTextNome">Name</string>
    <string name="editTextInformation">Information</string>
    <string name="editTextPhone">Contact</string>
    <string name="buttonLocationEscort">Send Locantion</string>
    <string name="editTextLocation">Location</string>
    <string name="buttonSaveGirl">Register</string>
    <string name="SwitchStatus">Available</string>
    <string name="textViewUploadPhoto">Upload Photo</string>
    <string name="textViewLoginEscort">Login Girl</string>
    <string name="textViewInformationActivityMain">Luxury girl with a click!</string>
    <string name="textViewCompanionsNew">Be a Girls</string>
    <string name="textViewUserNew">Register New User</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="textViewLoginGmail">Use Gmail Login</string>
    <string name="textViewLoginFacebook">Use Facebook Login</string>
    <string name="buttonSaveUser">Register</string>
    <string name="editTextAge">Age</string>
    <string name="ButtonAlertPhoto">Camera</string>
    <string name="ButtonAlertImage">Gallery</string>
    <string name="loading_image">Loading image from?</string>
    <string name="mensage_added_girl">Girl Added successfully!</string>
    <string name="select_picture_title">Select the picture</string>
    <string name="no_connection">No connection</string>
    <string name="downloading_motel_information">Downloading motels information...</string>
    <string name="failed_to_get_motels">Failed to get motels</string>
    <string name="mensage_not_added_girl">Girl already registered!</string>
    <string name="textViewNameList">Name</string>
    <string name="Please_enter_email">Please enter email</string>
    <string name="buttonAlterGirl">Alter</string>
    <string name="buttonRemoveGirl">Remove</string>
    <string name="email_deleted">deleted</string>
    <string name="map">Map</string>
    <string-array name="titles_tab">
        <item>Girls</item>
        <item>Motels</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
