<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@null" />

            <TextView
                android:id="@+id/textViewUploadPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:text="@string/textViewUploadPhoto">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:text="@string/SwitchStatus" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editTextNome" />
                </android.support.design.widget.TextInputLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <EditText
                            android:id="@+id/editTextInformation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextInformation"
                            android:inputType="textMultiLine"
                            android:maxLines="3" />
                    </android.support.design.widget.TextInputLayout>
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/editTextPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/editTextPhone"
                            android:inputType="phone" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">

                        <EditText
                            android:id="@+id/editTextAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:hint="@string/editTextAge"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="127dp">

                            <EditText
                                android:id="@+id/editTextLocation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/editTextLocation"
                                android:inputType="textMultiLine" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/buttonLocationEscort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/buttonLocationEscort" />
                    </FrameLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonSaveEscort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginBottom="10dp"
                        android:text="@string/buttonSaveEscort" />
                </FrameLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>